--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/topTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="쿠폰 다운받기"
@@ -16,6 +17,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+
         />
     <ImageButton
         android:layout_width="wrap_content"
@@ -28,6 +30,16 @@
         app:layout_constraintRight_toRightOf="parent"
         />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="580dp"
+        app:layout_constraintTop_toBottomOf="@+id/topTitle"
+        android:layout_marginTop="30dp"
+        app:layoutMananger = "androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation ="vertical"
+        tools:listitem="@layout/recycle_item"
+        />
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="380dp"
         android:layout_height="wrap_content"
@@ -37,6 +49,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+
         >
         <TextView
             android:id="@+id/submit"
