--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,14 +33,17 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="580dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
         app:layout_constraintTop_toBottomOf="@+id/topTitle"
+        app:layout_constraintBottom_toTopOf="@id/btn"
         android:layout_marginTop="30dp"
-        app:layoutMananger = "androidx.recyclerview.widget.LinearLayoutManager"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         android:orientation ="vertical"
         tools:listitem="@layout/recycle_item"
         />
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/btn"
         android:layout_width="380dp"
         android:layout_height="wrap_content"
         android:background="#000000"
